force-app/main/default/objects/Account_Target__c/Account_Target__c.object-meta.xml
<CustomObject>
    <label>Account Target</label>
    <nameField>
        <label>Account Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>