force-app/main/default/objects/Account_Target__c/fields/Current_Target__c.field-meta.xml
<CustomField>
    <fullName>Current_Target__c</fullName>
    <label>Achieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>