force-app/main/default/objects/Account_Target__c/fields/File_Url__c.field-meta.xml
<CustomField>
    <fullName>File_Url__c</fullName>
    <label>File Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>