force-app/main/default/objects/Account_Target__c/fields/Fiscal_Month__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Month__c</fullName>
    <label>Fiscal Month</label>
    <length>254</length>
    <type>Text</type>
</CustomField>